--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    
+    <h1><center> Hello, world! </center></h1>
   
    </body>
 </html>
